--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT = 8080
 DEV_MODE = development
-MONGO_URL = mongodb+srv://sweatkamal99:RTYwyA0alLVynRMR@cluster0.9sfrk.mongodb.net/
+MONGO_URL =mongodb+srv://pradumnmandal0:Dqoqs7Nz4AuMiMFi@cluster0.osvrc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = HGFHGEAD1212432432
 
 BRAINTREE_MERCHANT_ID=tmcvxj7236h8gkh8
 BRAINTREE_PUBLIC_KEY=ky2xh76h832ns8zp
 BRAINTREE_PRIVATE_KEY=a7d87af97f0991011d3753a3d5d17adc 
-CLIENT_URL=https://e-commerce-frontend-sigma-lovat.vercel.app
+CLIENT_URL=https://e-commerce-frontend-alpha-opal.vercel.app/
