--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.19.2",
     "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
