--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT = 8080
 DEV_MODE = development
 MONGO_URL =mongodb+srv://pradumnmandal0:Dqoqs7Nz4AuMiMFi@cluster0.osvrc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET = HGFHGEAD1212432432
+JWT_SECRET = kuguh
 
 BRAINTREE_MERCHANT_ID=tmcvxj7236h8gkh8
 BRAINTREE_PUBLIC_KEY=ky2xh76h832ns8zp
