--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ JWT_SECRET = kuguh
 BRAINTREE_MERCHANT_ID=tmcvxj7236h8gkh8
 BRAINTREE_PUBLIC_KEY=ky2xh76h832ns8zp
 BRAINTREE_PRIVATE_KEY=a7d87af97f0991011d3753a3d5d17adc 
-CLIENT_URL=https://e-commerce-frontend-alpha-opal.vercel.app/
+CLIENT_URL=https://e-commerce-frontend-alpha-opal.vercel.app
