--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
       "src": "/(.*)",
       "dest": "/server.js",
       "headers": {
-        "Access-Control-Allow-Origin": "https://e-commerce-frontend-alpha-opal.vercel.app",
+        "Access-Control-Allow-Origin": "https://e-commerce-frontend-alpha-opal.vercel.app/",
         "Access-Control-Allow-Credentials": "true",
         "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
       }
